<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ic_launcher">
    <TextView
        android:id="@+id/ttileTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details"
        android:textSize="30dp"
        android:textStyle="bold"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:id="@+id/lineralayout1">
    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/nameEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName" />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:id="@+id/lineralayout2">
    <TextView
        android:id="@+id/vehnoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_no"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/vehnoEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:id="@+id/lineralayout3">
    <TextView
        android:id="@+id/timeslotTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_slot"
        android:textSize="20dp"/>

        <TextView
            android:id="@+id/fromTimeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:id="@+id/starttimeBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/toTxt"
        android:layout_marginLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to" />
        <TextView
            android:id="@+id/toTimeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

    <Button
        android:layout_marginLeft="10dp"
        android:id="@+id/endtimeBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@mipmap/ic_launcher_round" />
    </LinearLayout>

     <Button
        android:id="@+id/bookslotBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_slot"
         android:background="#F24D5A"
         android:textSize="20dp"
         android:layout_gravity="center"
         android:layout_marginTop="30dp" />

</LinearLayout>